# recallix

./: .gitignore  README.md  config.yaml  package-lock.json  package.json  requirements.txt  server.py  system_health_check.py  test_intent_retrieval.py  test_sdk.py  tsconfig.json
.github/workflows/: deploy.yml
app/: globals.css  layout.tsx  page.tsx
app/architecture/: page.tsx
app/benchmark/: page.tsx
app/flow-control/: page.tsx
app/observability/: page.tsx
app/playground/: page.tsx
app/roadmap/: page.tsx
app/sdk/: page.tsx
backend/: .gitignore  test_forgetting_rl.py  test_integration.py  test_meta_memory.py  test_neural_ranking.py  test_world_model.py
backend/agents/coordination/: engine.py
backend/agents/registry/: manager.py
backend/api/: deps.py
backend/api/agents/: router.py
backend/api/internal/: internal_api.py
backend/api/middleware/: auth.py
backend/api/public/: public_api.py
backend/brain/: requirements.txt
backend/brain/agent_memory/: manager.py
backend/brain/api/: main.py
backend/brain/attention/: attention_controller.py
backend/brain/memory/: manager.py  reasoning_engine.py  recall_engine.py  scorers.py  truth_engine.py
backend/brain/memory/archive/: archive_store.py
backend/brain/memory/episodic/: episodic_memory.py
backend/brain/memory_ranking/: importance_ranker.py  reinforcement_learning.py  reranker.py
backend/brain/meta_memory/: meta_analyzer.py  meta_memory_engine.py  policy_optimizer.py  schema_optimizer.py
backend/brain/models/: model_router.py
backend/brain/prediction/: predictive_recall.py
backend/brain/retrieval/: context_builder.py  context_inference.py  intent_detector.py  manager.py  memory_router.py  retrieval_planner.py
backend/brain/schema_engine/: detector.py  proposer.py
backend/brain/utils/: background_worker.py  decay_logic.py  importance_scorer.py
backend/brain/workers/: compression_worker.py  evolution_worker.py  forgetting_worker.py  meta_memory_worker.py  ranking_worker.py  replay_worker.py
backend/brain/world_model/: planning_engine.py  prediction_engine.py  state_inference.py  timeline_engine.py
backend/infra_cpp/: CMakeLists.txt  attention_index.h  benchmark_hnsw.cpp  clustering_engine.cpp  clustering_engine.h  event_queue.cpp  event_queue.h  graph_engine.cpp  graph_engine.h  main.cpp  memory_indexer.cpp  memory_indexer.h  timeline_engine.cpp  timeline_engine.h  vector_engine.cpp  vector_engine.h
backend/storage/: agent_registry.db  api_keys.json  schema_registry.json  working_memory.json
backend/storage/archive_store/: archived_memories.db
backend/storage/schema_registry/: schemas.db
backend/storage/sqlite_db/: memory.db  reflections.db
backend/storage/timeline_store/: timeline.db
backend/storage/world_state_store/: states.db
backend/utils/: internal_client.py  paths.py
components/: MemoryGraph.tsx
docs/: api_reference.md  architecture_high_level.puml  architecture_technical_depth.puml  quickstart.md
lib/: api.ts
rag_chat_app/: .gitignore  app.py  database.py  llm_client.py  memory_client.py
scratch/: accuracy_benchmark.py  debug_api.py  debug_fts.py  debug_recall.py  debug_scale.py  debug_server.py  debug_slot.py  diagnose_retention.py  gauntlet_v1.py  gauntlet_v2.py  gauntlet_v3.py  init_dbs.py  inspect_system.py  investigate_miss.py  multi_agent_benchmark.py  retention_benchmark.py  scale_benchmark.py  test_nvidia_apis.py  test_regex.py
sdk/python/memoryos/: client.py  memory.py
sdk/typescript/: package.json
sdk/typescript/src/: client.ts  index.ts  memory.ts
(+7 files in other folders)
